updated jdl resulting on the update of entities, mappings front and backend